# ssort

./: .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
src/ssort/: _dependencies.py  _ssort.py
