[tool]
[tool.poetry]
name = "ssort"
version = "0.10.0"
description = "The python statement sorter"
license = "MIT"
classifiers = ["Development Status :: 5 - Production/Stable",
"Environment :: Console",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Topic :: Software Development :: Libraries :: Python Modules",
"Topic :: Software Development :: Quality Assurance"]
homepage = "https://github.com/bwhmather/ssort"
authors = ["Ben Mather <bwhmather@bwhmather.com>",
"Ben Mather <bwhmather@bwhmather.com>"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
[tool.black]
line_length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[[tool.mypy.overrides]]
module = "pathspec"
ignore_missing_imports = true
